fix responsive spacing

--- a/KitBuilder/KitBuilderWeb/reactjs/KitBuilder.Web/src/components/Kits/style.css
+++ b/KitBuilder/KitBuilderWeb/reactjs/KitBuilder.Web/src/components/Kits/style.css
@@ -17,7 +17,8 @@ div[class^="MuiFormControl-root-"] input {
     border-bottom: none;
     box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.1);
     padding-bottom: 8px !important;
-    padding-left: 8px !important;
+    padding-right: 16px !important;
+    padding-left: 16px !important;
 }
 
 .kit-footer-root {
